--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./css/all.css">
         <link rel="stylesheet" href="./css/style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
     </head>
     <body>
         <div id="top">
@@ -17,11 +18,21 @@
                     <a href="./views/access.html">ACCESS</a>
                     <a href="./views/contact.html">CONTACT</a>
                 </div>
+                <div class="humberger top_humberger">
+                    <div class="humberger_inner top_humberger_inner">
+                        <div class="bar-1"></div>
+                        <div class="bar-2"></div>
+                        <div class="bar-3"></div>
+                    </div>
+                </div>
                 <div id="top_title">
                     <h1>HOT CO.,LTD.</h1>
                 </div>
             </div>
         </div>
+
+        <!-- js file -->
+        <script type="text/javascript" src="../js/index.js"></script>
 
     </body>
 </html>
