--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./css/all.css">
         <link rel="stylesheet" href="./css/style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+        <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
     </head>
     <body>
         <div id="top">
@@ -32,7 +32,7 @@
         </div>
 
         <!-- js file -->
-        <script type="text/javascript" src="../js/index.js"></script>
+        <script type="text/javascript" src="./js/index.js"></script>
 
     </body>
 </html>
